DDD Gain: $ 1.79 Win %: 71.00 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3
DDD Gain: $ -10.79 Win %: 14.00 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_TR_QP_DB15
DDD Gain: $ -0.11 Win %: 57.00 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_RV_TR_DB15
DDD Gain: $ -0.11 Win %: 57.00 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_RV_TR_DB15
DDD Gain: $ -0.77 Win %: 57.00 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_RV_AV_DB15
DDD Gain: $ -3.04 Win %: 42.00 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_RV_AL_DB15
DDD Gain: $ -24.52 Win %: 0 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_RV_QP_DB15
DDD Gain: $ -0.56 Win %: 57.00 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_HM_TR_DB15
DDD Gain: $ 4.98 Win %: 57.00 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_HM_AV_DB15
DDD Gain: $ -27.06 Win %: 0 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_HM_QP_DB15
DDD Gain: $ -0.55 Win %: 42.00 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_IT_QL_DB15
DDD Gain: $ -15.19 Win %: 42.00 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_IT_QP_DB15
DDD Gain: $ -1.78 Win %: 57.00 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_TR_IR4
DDD Gain: $ -12.23 Win %: 14.00 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_TR_QP
DDD Gain: $ -25.95 Win %: 0 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_QP_IR4
DDD Gain: $ 0.13 Win %: 57.00 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_RV_TR
DDD Gain: $ 1.23 Win %: 71.00 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_RV_AV
DDD Gain: $ 2.89 Win %: 71.00 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_RV_AL
DDD Gain: $ -31.48 Win %: 0 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_RV_QP
DDD Gain: $ -4.19 Win %: 42.00 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_HM_TR
DDD Gain: $ 3.34 Win %: 71.00 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_HM_AV
DDD Gain: $ -32.98 Win %: 0 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_HM_QP
DDD Gain: $ 1.8 Win %: 57.00 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_IT_QL
DDD Gain: $ -15.68 Win %: 14.00 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_IT_QP
DDD Gain: $ 2.5 Win %: 71.00 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_RV
DDD Gain: $ -9.46 Win %: 28.00 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_IR4
DDD Gain: $ -1.25 Win %: 57.00 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_TR
DDD Gain: $ 6.09 Win %: 71.00 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_AV
DDD Gain: $ -6.42 Win %: 14.00 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_VI
DDD Gain: $ -2.3 Win %: 42.00 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_AL
DDD Gain: $ -5.69 Win %: 28.00 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_LI
DDD Gain: $ -32.35 Win %: 0 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_QP
DDD Gain: $ 1.95 Win %: 71.00 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_HM
DDD Gain: $ 5.86 Win %: 85.00 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_SS
DDD Gain: $ 1.94 Win %: 57.00 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_QL
DDD Gain: $ -1.98 Win %: 42.00 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_DB15
DDD Gain: $ 1.65 Win %: 71.00 in 7 days with algo TB2_HI_QM_OB2_OS2_CB3_CS3_IT
DDD Gain: $ -3.6 Win %: 42.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_TR_QP_DB6
DDD Gain: $ 1.8 Win %: 42.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_RV_TR_DB6
DDD Gain: $ 1.8 Win %: 42.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_RV_TR_DB6
DDD Gain: $ 3.32 Win %: 71.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_RV_AV_DB6
DDD Gain: $ 3.54 Win %: 71.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_RV_AL_DB6
DDD Gain: $ 0.54 Win %: 57.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_RV_QP_DB6
DDD Gain: $ 0.83 Win %: 42.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_HM_TR_DB6
DDD Gain: $ 7.7 Win %: 100.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_HM_AV_DB6
DDD Gain: $ 0.16 Win %: 71.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_HM_QP_DB6
DDD Gain: $ 2.34 Win %: 42.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_IT_QL_DB6
DDD Gain: $ 0.01 Win %: 42.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_IT_QP_DB6
DDD Gain: $ 1.65 Win %: 42.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_TR_IR1
DDD Gain: $ -3.18 Win %: 42.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_TR_QP
DDD Gain: $ -1.31 Win %: 42.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_QP_IR1
DDD Gain: $ 2.19 Win %: 42.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_RV_TR
DDD Gain: $ 2.63 Win %: 57.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_RV_AV
DDD Gain: $ 2.85 Win %: 57.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_RV_AL
DDD Gain: $ -0.36 Win %: 57.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_RV_QP
DDD Gain: $ 1.72 Win %: 42.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_HM_TR
DDD Gain: $ 5.26 Win %: 71.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_HM_AV
DDD Gain: $ -0.74 Win %: 71.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_HM_QP
DDD Gain: $ 1.87 Win %: 42.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_IT_QL
DDD Gain: $ -2.02 Win %: 57.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_IT_QP
DDD Gain: $ 1.83 Win %: 42.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_RV
DDD Gain: $ 3.22 Win %: 57.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_IR1
DDD Gain: $ 1.78 Win %: 28.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_TR
DDD Gain: $ 2.33 Win %: 57.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_AV
DDD Gain: $ -1.64 Win %: 42.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_VI
DDD Gain: $ 2.55 Win %: 57.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_AL
DDD Gain: $ 3.81 Win %: 42.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_LI
DDD Gain: $ 0.09 Win %: 71.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_QP
DDD Gain: $ 5.15 Win %: 71.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_HM
DDD Gain: $ 3.17 Win %: 42.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_SS
DDD Gain: $ 3.69 Win %: 42.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_QL
DDD Gain: $ 3.75 Win %: 57.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_DB6
DDD Gain: $ 1.57 Win %: 42.00 in 7 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_IT
DDD Gain: $ -10.94 Win %: 14.00 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_TR_QP_DB15
DDD Gain: $ 1.31 Win %: 57.00 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_RV_TR_DB15
DDD Gain: $ 1.31 Win %: 57.00 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_RV_TR_DB15
DDD Gain: $ -9.41 Win %: 42.00 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_RV_AV_DB15
DDD Gain: $ -4.96 Win %: 28.00 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_RV_AL_DB15
DDD Gain: $ -32.41 Win %: 0 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_RV_QP_DB15
DDD Gain: $ 1 Win %: 57.00 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_HM_TR_DB15
DDD Gain: $ -5.44 Win %: 28.00 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_HM_AV_DB15
DDD Gain: $ -31.42 Win %: 0 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_HM_QP_DB15
DDD Gain: $ -0.16 Win %: 42.00 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_IT_QL_DB15
DDD Gain: $ -15.81 Win %: 42.00 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_IT_QP_DB15
DDD Gain: $ -1.55 Win %: 42.00 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_TR_IR4
DDD Gain: $ -11.04 Win %: 28.00 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_TR_QP
DDD Gain: $ -22.38 Win %: 0 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_QP_IR4
DDD Gain: $ 3.05 Win %: 71.00 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_RV_TR
DDD Gain: $ 3.27 Win %: 71.00 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_RV_AV
DDD Gain: $ -2.52 Win %: 57.00 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_RV_AL
DDD Gain: $ -41.84 Win %: 0 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_RV_QP
DDD Gain: $ 0.38 Win %: 71.00 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_HM_TR
DDD Gain: $ 4.06 Win %: 71.00 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_HM_AV
DDD Gain: $ -40.5 Win %: 0 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_HM_QP
DDD Gain: $ -0.58 Win %: 42.00 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_IT_QL
DDD Gain: $ -12.92 Win %: 14.00 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_IT_QP
DDD Gain: $ -8.16 Win %: 42.00 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_RV
DDD Gain: $ -0.1 Win %: 71.00 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_IR4
DDD Gain: $ 3.05 Win %: 71.00 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_TR
DDD Gain: $ 7.6 Win %: 85.00 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_AV
DDD Gain: $ -3.6 Win %: 42.00 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_VI
DDD Gain: $ -2.39 Win %: 57.00 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_AL
DDD Gain: $ -5.16 Win %: 42.00 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_LI
DDD Gain: $ -40.59 Win %: 0 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_QP
DDD Gain: $ -2.94 Win %: 57.00 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_HM
DDD Gain: $ -2.5 Win %: 57.00 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_SS
DDD Gain: $ -0.58 Win %: 42.00 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_QL
DDD Gain: $ -3.67 Win %: 57.00 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_DB15
DDD Gain: $ -4.61 Win %: 42.00 in 7 days with algo TB2_LO_QM_OB1_OS1_CB3_CS3_IT
DDD Gain: $ 0.34 Win %: 71.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_TR_QP_DB6
DDD Gain: $ 0.47 Win %: 42.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_RV_TR_DB6
DDD Gain: $ 0.47 Win %: 42.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_RV_TR_DB6
DDD Gain: $ -0.65 Win %: 42.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_RV_AV_DB6
DDD Gain: $ 0.63 Win %: 71.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_RV_AL_DB6
DDD Gain: $ 0.54 Win %: 42.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_RV_QP_DB6
DDD Gain: $ -0.54 Win %: 42.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_HM_TR_DB6
DDD Gain: $ -3.78 Win %: 14.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_HM_AV_DB6
DDD Gain: $ 0.07 Win %: 57.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_HM_QP_DB6
DDD Gain: $ -1.69 Win %: 57.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_IT_QL_DB6
DDD Gain: $ -0.26 Win %: 57.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_IT_QP_DB6
DDD Gain: $ -0.81 Win %: 42.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_TR_IR1
DDD Gain: $ 0.34 Win %: 71.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_TR_QP
DDD Gain: $ -2.91 Win %: 28.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_QP_IR1
DDD Gain: $ 0.47 Win %: 42.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_RV_TR
DDD Gain: $ -0.65 Win %: 42.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_RV_AV
DDD Gain: $ 0.63 Win %: 71.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_RV_AL
DDD Gain: $ 2.37 Win %: 42.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_RV_QP
DDD Gain: $ -0.54 Win %: 42.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_HM_TR
DDD Gain: $ -3.78 Win %: 14.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_HM_AV
DDD Gain: $ 0.07 Win %: 57.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_HM_QP
DDD Gain: $ -1.69 Win %: 57.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_IT_QL
DDD Gain: $ -0.26 Win %: 57.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_IT_QP
DDD Gain: $ 0.11 Win %: 71.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_RV
DDD Gain: $ -2.31 Win %: 28.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_IR1
DDD Gain: $ -0.16 Win %: 42.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_TR
DDD Gain: $ -2.85 Win %: 28.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_AV
DDD Gain: $ -2.18 Win %: 57.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_VI
DDD Gain: $ 1.85 Win %: 57.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_AL
DDD Gain: $ -0.99 Win %: 42.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_LI
DDD Gain: $ 0.17 Win %: 57.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_QP
DDD Gain: $ -0.65 Win %: 57.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_HM
DDD Gain: $ -0.34 Win %: 57.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_SS
DDD Gain: $ -0.64 Win %: 57.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_QL
DDD Gain: $ -0.78 Win %: 57.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_DB6
DDD Gain: $ -1.83 Win %: 57.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_IT
DDD Gain: $ -1.83 Win %: 57.00 in 7 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_IT
DDD Gain: $ 3.72 Win %: 50.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5
DDD Gain: $ 0.2 Win %: 62.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_TR_QP_DB6
DDD Gain: $ -3.69 Win %: 25.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_RV_TR_DB6
DDD Gain: $ 0.6 Win %: 62.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_RV_AV_DB6
DDD Gain: $ 1.97 Win %: 75.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_RV_AL_DB6
DDD Gain: $ -0.16 Win %: 50.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_RV_QP_DB6
DDD Gain: $ 0.71 Win %: 37.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_HM_TR_DB6
DDD Gain: $ 8.75 Win %: 100.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_HM_AV_DB6
DDD Gain: $ -2.8 Win %: 62.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_HM_QP_DB6
DDD Gain: $ 0.94 Win %: 37.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_IT_QL_DB6
DDD Gain: $ 0.02 Win %: 50.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_IT_QP_DB6
DDD Gain: $ 2.32 Win %: 50.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_TR_IR1
DDD Gain: $ -3.41 Win %: 37.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_TR_QP
DDD Gain: $ -1.92 Win %: 37.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_QP_IR1
DDD Gain: $ 3.45 Win %: 50.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_RV_TR
DDD Gain: $ -0.78 Win %: 62.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_RV_AV
DDD Gain: $ 0.69 Win %: 62.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_RV_AL
DDD Gain: $ -0.58 Win %: 50.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_RV_QP
DDD Gain: $ 1.54 Win %: 37.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_HM_TR
DDD Gain: $ 5.39 Win %: 75.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_HM_AV
DDD Gain: $ -2.21 Win %: 62.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_HM_QP
DDD Gain: $ 0.2 Win %: 37.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_IT_QL
DDD Gain: $ -4.04 Win %: 50.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_IT_QP
DDD Gain: $ 2.34 Win %: 37.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_AO_AC
DDD Gain: $ 2.19 Win %: 62.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_RV
DDD Gain: $ 3.32 Win %: 62.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_IR1
DDD Gain: $ 2.39 Win %: 37.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_TR
DDD Gain: $ 3.39 Win %: 62.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_AV
DDD Gain: $ -1.78 Win %: 50.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_AL
DDD Gain: $ -0.02 Win %: 62.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_VI
DDD Gain: $ 4 Win %: 50.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_LI
DDD Gain: $ 1.02 Win %: 75.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_QP
DDD Gain: $ 5.28 Win %: 75.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_HM
DDD Gain: $ 3.27 Win %: 50.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_SS
DDD Gain: $ 3.05 Win %: 37.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_QL
DDD Gain: $ 3.06 Win %: 50.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_DB6
DDD Gain: $ 3.49 Win %: 50.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_AO
DDD Gain: $ 3.36 Win %: 37.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_AC
DDD Gain: $ 2.58 Win %: 50.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_IT
DDD Gain: $ 0.35 Win %: 75.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_TR_QP_DB6
DDD Gain: $ 2.24 Win %: 50.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_RV_TR_DB6
DDD Gain: $ -1.31 Win %: 50.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_RV_AV_DB6
DDD Gain: $ 2.55 Win %: 75.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_RV_AL_DB6
DDD Gain: $ -1.61 Win %: 37.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_RV_QP_DB6
DDD Gain: $ -1.18 Win %: 50.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_HM_TR_DB6
DDD Gain: $ -2.99 Win %: 25.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_HM_AV_DB6
DDD Gain: $ 1.7 Win %: 62.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_HM_QP_DB6
DDD Gain: $ -1.63 Win %: 62.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_IT_QL_DB6
DDD Gain: $ 0.39 Win %: 62.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_IT_QP_DB6
DDD Gain: $ -1.2 Win %: 37.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_TR_IR1
DDD Gain: $ -0.93 Win %: 62.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_TR_QP
DDD Gain: $ -3.3 Win %: 25.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_QP_IR1
DDD Gain: $ 0.28 Win %: 37.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_RV_TR
DDD Gain: $ -2.18 Win %: 37.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_RV_AV
DDD Gain: $ 2.55 Win %: 75.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_RV_AL
DDD Gain: $ 0.64 Win %: 50.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_RV_QP
DDD Gain: $ 0.19 Win %: 50.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_HM_TR
DDD Gain: $ -7.96 Win %: 12.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_HM_AV
DDD Gain: $ -4.45 Win %: 62.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_HM_QP
DDD Gain: $ -1.63 Win %: 62.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_IT_QL
DDD Gain: $ -2.14 Win %: 50.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_IT_QP
DDD Gain: $ -0.72 Win %: 62.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_AO_AC
DDD Gain: $ -0.08 Win %: 62.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_RV
DDD Gain: $ -3.34 Win %: 25.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_IR1
DDD Gain: $ 0.51 Win %: 50.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_TR
DDD Gain: $ -1.83 Win %: 37.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_AV
DDD Gain: $ 2.05 Win %: 62.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_AL
DDD Gain: $ -2.18 Win %: 62.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_VI
DDD Gain: $ -2.75 Win %: 37.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_LI
DDD Gain: $ 0.23 Win %: 62.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_QP
DDD Gain: $ -3.2 Win %: 37.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_HM
DDD Gain: $ -0.15 Win %: 62.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_SS
DDD Gain: $ -0.58 Win %: 62.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_QL
DDD Gain: $ -1.06 Win %: 50.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_DB6
DDD Gain: $ -0.72 Win %: 62.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_AO
DDD Gain: $ -0.72 Win %: 62.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_AC
DDD Gain: $ -1.77 Win %: 62.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_IT
DDD Gain: $ -6.26 Win %: 50.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_TR_QP_DB10
DDD Gain: $ 1.88 Win %: 50.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_RV_TR_DB10
DDD Gain: $ -2.93 Win %: 25.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_RV_AV_DB10
DDD Gain: $ 2.81 Win %: 75.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_RV_AL_DB10
DDD Gain: $ -3.14 Win %: 50.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_RV_QP_DB10
DDD Gain: $ 3.27 Win %: 62.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_HM_TR_DB10
DDD Gain: $ 1.57 Win %: 37.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_HM_AV_DB10
DDD Gain: $ -5.72 Win %: 25.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_HM_QP_DB10
DDD Gain: $ 3.65 Win %: 62.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_IT_QL_DB10
DDD Gain: $ -1.14 Win %: 50.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_IT_QP_DB10
DDD Gain: $ 3.36 Win %: 75.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_TR_IR3
DDD Gain: $ -2.94 Win %: 50.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_TR_QP
DDD Gain: $ -3.43 Win %: 50.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_QP_IR3
DDD Gain: $ 2.08 Win %: 37.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_RV_TR
DDD Gain: $ -4.17 Win %: 25.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_RV_AV
DDD Gain: $ 4.83 Win %: 75.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_RV_AL
DDD Gain: $ -4.8 Win %: 37.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_RV_QP
DDD Gain: $ 5.1 Win %: 62.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_HM_TR
DDD Gain: $ 3.15 Win %: 37.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_HM_AV
DDD Gain: $ -4.65 Win %: 37.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_HM_QP
DDD Gain: $ 3.41 Win %: 75.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_IT_QL
DDD Gain: $ 0.53 Win %: 62.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_IT_QP
DDD Gain: $ 1.96 Win %: 75.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_AO_AC
DDD Gain: $ -0.73 Win %: 75.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_RV
DDD Gain: $ 3.94 Win %: 75.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_IR3
DDD Gain: $ 3.04 Win %: 75.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_TR
DDD Gain: $ -1.78 Win %: 37.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_AV
DDD Gain: $ 4.33 Win %: 87.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_AL
DDD Gain: $ 0.07 Win %: 62.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_VI
DDD Gain: $ -0.61 Win %: 37.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_LI
DDD Gain: $ -4.15 Win %: 25.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_QP
DDD Gain: $ 1.19 Win %: 62.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_HM
DDD Gain: $ 1.14 Win %: 75.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_SS
DDD Gain: $ 4.4 Win %: 75.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_QL
DDD Gain: $ 1.67 Win %: 62.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_DB10
DDD Gain: $ 1.85 Win %: 62.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_AO
DDD Gain: $ 0.48 Win %: 62.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_AC
DDD Gain: $ 1.5 Win %: 75.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_IT
DDD Gain: $ -12.87 Win %: 37.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_TR_QP_DB15
DDD Gain: $ -0.71 Win %: 37.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_RV_TR_DB15
DDD Gain: $ -1.28 Win %: 50.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_RV_AV_DB15
DDD Gain: $ -7.43 Win %: 37.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_RV_AL_DB15
DDD Gain: $ -17.02 Win %: 12.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_RV_QP_DB15
DDD Gain: $ -3.23 Win %: 37.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_HM_TR_DB15
DDD Gain: $ -0.93 Win %: 50.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_HM_AV_DB15
DDD Gain: $ -21.37 Win %: 0 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_HM_QP_DB15
DDD Gain: $ 0.35 Win %: 62.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_IT_QL_DB15
DDD Gain: $ -4.01 Win %: 62.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_IT_QP_DB15
DDD Gain: $ 0.51 Win %: 50.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_TR_IR4
DDD Gain: $ -9.09 Win %: 37.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_TR_QP
DDD Gain: $ -17.78 Win %: 25.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_QP_IR4
DDD Gain: $ -3.01 Win %: 37.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_RV_TR
DDD Gain: $ -2.38 Win %: 37.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_RV_AV
DDD Gain: $ 0.12 Win %: 62.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_RV_AL
DDD Gain: $ -17.75 Win %: 25.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_RV_QP
DDD Gain: $ -3.14 Win %: 25.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_HM_TR
DDD Gain: $ -3.44 Win %: 25.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_HM_AV
DDD Gain: $ -21.36 Win %: 12.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_HM_QP
DDD Gain: $ -0.47 Win %: 50.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_IT_QL
DDD Gain: $ -4.32 Win %: 25.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_IT_QP
DDD Gain: $ -209.89 Win %: 37.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_AO_AC
DDD Gain: $ 1.25 Win %: 62.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_RV
DDD Gain: $ 3.04 Win %: 75.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_IR4
DDD Gain: $ -12.69 Win %: 37.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_TR
DDD Gain: $ -0.42 Win %: 37.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_AV
DDD Gain: $ 0.49 Win %: 62.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_AL
DDD Gain: $ -2.17 Win %: 37.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_VI
DDD Gain: $ 0.86 Win %: 62.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_LI
DDD Gain: $ -16.73 Win %: 25.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_QP
DDD Gain: $ 1.02 Win %: 62.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_HM
DDD Gain: $ 1.44 Win %: 62.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_SS
DDD Gain: $ 1.34 Win %: 50.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_QL
DDD Gain: $ -8.2 Win %: 37.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_DB15
DDD Gain: $ 2.8 Win %: 75.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_AO
DDD Gain: $ -5.22 Win %: 50.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_AC
DDD Gain: $ -1.48 Win %: 62.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_IT
DDD Gain: $ -1.48 Win %: 62.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_IT
DDD Gain: $ 3.49 Win %: 50.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5
DDD Gain: $ -0.52 Win %: 62.00 in 8 days with algo TB5_EO_EC_QM_OB2_OS2_CB5_CS5_TS
DDD Gain: $ 0.98 Win %: 75.00 in 8 days with algo TB5_HS_QM_OB5_OS5_CB3_CS3_TS
DDD Gain: $ 0.07 Win %: 75.00 in 8 days with algo TB3_OC_QM_OB4_OS4_CB3_CS3_TS
DDD Gain: $ -1.38 Win %: 62.00 in 8 days with algo TB2_HL_QM_OB3_OS3_CB4_CS4_TS
