DDD Gain: $ -2.6 Win %: 58.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1
DDD Gain: $ -20.2 Win %: 25.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_TR_QP_DB10
DDD Gain: $ -7.52 Win %: 41.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_RV_TR_DB10
DDD Gain: $ -2.4 Win %: 50.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_RV_AV_DB10
DDD Gain: $ -5.41 Win %: 50.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_RV_AL_DB10
DDD Gain: $ -27.92 Win %: 8.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_RV_QP_DB10
DDD Gain: $ -6.4 Win %: 41.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_HM_TR_DB10
DDD Gain: $ -1.28 Win %: 50.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_HM_AV_DB10
DDD Gain: $ -26.61 Win %: 8.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_HM_QP_DB10
DDD Gain: $ -4.72 Win %: 25.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_IT_QL_DB10
DDD Gain: $ -27.24 Win %: 8.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_IT_QP_DB10
DDD Gain: $ -2.85 Win %: 50.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_TR_IR3
DDD Gain: $ -5.79 Win %: 50.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_TR_TS
DDD Gain: $ -13.73 Win %: 25.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_TR_QP
DDD Gain: $ -21.56 Win %: 16.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_QP_IR3
DDD Gain: $ -7.61 Win %: 33.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_RV_TR
DDD Gain: $ -3.53 Win %: 58.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_RV_AV
DDD Gain: $ 0.41 Win %: 66.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_RV_AL
DDD Gain: $ -29.19 Win %: 16.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_RV_QP
DDD Gain: $ -10.09 Win %: 33.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_HM_TR
DDD Gain: $ -1.46 Win %: 50.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_HM_AV
DDD Gain: $ -5.79 Win %: 50.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_HM_AL
DDD Gain: $ -31.33 Win %: 16.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_HM_QP
DDD Gain: $ -0.94 Win %: 50.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_IT_QL
DDD Gain: $ -22.29 Win %: 33.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_IT_QP
DDD Gain: $ -6.44 Win %: 58.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_IT_TS
DDD Gain: $ -7.43 Win %: 41.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_AO_AC
DDD Gain: $ -3.26 Win %: 33.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_QP_PM
DDD Gain: $ -2.8 Win %: 75.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_AV_TS
DDD Gain: $ -2.39 Win %: 66.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_AL_TS
DDD Gain: $ -4.05 Win %: 58.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_RV
DDD Gain: $ -3.61 Win %: 33.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_IR3
DDD Gain: $ -6.48 Win %: 33.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_TR
DDD Gain: $ -5.21 Win %: 58.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_AV
DDD Gain: $ -0.99 Win %: 58.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_AL
DDD Gain: $ -4.04 Win %: 25.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_VI
DDD Gain: $ -1.67 Win %: 50.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_LI
DDD Gain: $ -22.29 Win %: 33.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_QP
DDD Gain: $ -5.26 Win %: 50.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_HM
DDD Gain: $ -2.83 Win %: 58.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_SS
DDD Gain: $ 1.06 Win %: 50.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_QL
DDD Gain: $ -8.2 Win %: 33.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_DB10
DDD Gain: $ -5.86 Win %: 50.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_AO
DDD Gain: $ -6.78 Win %: 41.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_AC
DDD Gain: $ -4.71 Win %: 58.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_IT
DDD Gain: $ -3.5 Win %: 33.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_PM
DDD Gain: $ -5.51 Win %: 58.00 in 12 days with algo TB3_HL_LO_QM_OB1_OS1_CB1_CS1_TS
DDD Gain: $ -20.2 Win %: 25.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_TR_QP_DB10
DDD Gain: $ -7.52 Win %: 41.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_RV_TR_DB10
DDD Gain: $ -2.4 Win %: 50.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_RV_AV_DB10
DDD Gain: $ -5.41 Win %: 50.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_RV_AL_DB10
DDD Gain: $ -25.79 Win %: 16.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_RV_QP_DB10
DDD Gain: $ -1.53 Win %: 50.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_HM_TR_DB10
DDD Gain: $ -1.28 Win %: 50.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_HM_AV_DB10
DDD Gain: $ -28.01 Win %: 8.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_HM_QP_DB10
DDD Gain: $ -5.0 Win %: 25.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_IT_QL_DB10
DDD Gain: $ -27.75 Win %: 8.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_IT_QP_DB10
DDD Gain: $ -1.21 Win %: 58.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_TR_IR3
DDD Gain: $ -5.79 Win %: 50.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_TR_TS
DDD Gain: $ -11.17 Win %: 33.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_TR_QP
DDD Gain: $ -21.56 Win %: 16.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_QP_IR3
DDD Gain: $ -7.61 Win %: 33.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_RV_TR
DDD Gain: $ -3.53 Win %: 58.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_RV_AV
DDD Gain: $ 0.41 Win %: 66.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_RV_AL
DDD Gain: $ -29.19 Win %: 16.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_RV_QP
DDD Gain: $ -10.43 Win %: 33.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_HM_TR
DDD Gain: $ -1.97 Win %: 50.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_HM_AV
DDD Gain: $ -5.79 Win %: 50.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_HM_AL
DDD Gain: $ -31.33 Win %: 16.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_HM_QP
DDD Gain: $ -0.94 Win %: 50.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_IT_QL
DDD Gain: $ -22.29 Win %: 33.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_IT_QP
DDD Gain: $ -6.44 Win %: 58.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_IT_TS
DDD Gain: $ -7.43 Win %: 41.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_AO_AC
DDD Gain: $ -3.52 Win %: 25.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_QP_PM
DDD Gain: $ -2.8 Win %: 75.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_AV_TS
DDD Gain: $ -2.39 Win %: 66.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_AL_TS
DDD Gain: $ -4.05 Win %: 58.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_RV
DDD Gain: $ -3.61 Win %: 33.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_IR3
DDD Gain: $ -6.28 Win %: 33.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_TR
DDD Gain: $ -3.53 Win %: 58.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_AV
DDD Gain: $ -0.99 Win %: 58.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_AL
DDD Gain: $ -4.04 Win %: 25.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_VI
DDD Gain: $ -1.29 Win %: 50.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_LI
DDD Gain: $ -22.29 Win %: 33.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_QP
DDD Gain: $ -6.39 Win %: 41.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_HM
DDD Gain: $ -2.83 Win %: 58.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_SS
DDD Gain: $ -0.95 Win %: 41.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_QL
DDD Gain: $ -8.2 Win %: 33.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_DB10
DDD Gain: $ -5.86 Win %: 50.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_AO
DDD Gain: $ -6.49 Win %: 41.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_AC
DDD Gain: $ -5.38 Win %: 58.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_IT
DDD Gain: $ -0.79 Win %: 41.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_PM
DDD Gain: $ -5.51 Win %: 58.00 in 12 days with algo TB3_HL_LO_QM_OB2_OS2_CB2_CS2_TS
DDD Gain: $ -11.92 Win %: 25.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_TR_QP_DB10
DDD Gain: $ -0.77 Win %: 66.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_RV_TR_DB10
DDD Gain: $ 5.28 Win %: 75.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_RV_AV_DB10
DDD Gain: $ 1.72 Win %: 41.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_RV_AL_DB10
DDD Gain: $ -13.98 Win %: 16.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_RV_QP_DB10
DDD Gain: $ -0.28 Win %: 58.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_HM_TR_DB10
DDD Gain: $ 4.9 Win %: 66.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_HM_AV_DB10
DDD Gain: $ -11.05 Win %: 25.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_HM_QP_DB10
DDD Gain: $ 0.38 Win %: 58.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_IT_QL_DB10
DDD Gain: $ -10.47 Win %: 25.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_IT_QP_DB10
DDD Gain: $ 8.3 Win %: 66.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_TR_IR3
DDD Gain: $ 2.56 Win %: 75.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_TR_TS
DDD Gain: $ -4.31 Win %: 50.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_TR_QP
DDD Gain: $ -0.5 Win %: 50.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_QP_IR3
DDD Gain: $ 4.75 Win %: 58.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_RV_TR
DDD Gain: $ 4.69 Win %: 58.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_RV_AV
DDD Gain: $ 6.55 Win %: 75.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_RV_AL
DDD Gain: $ -12.81 Win %: 41.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_RV_QP
DDD Gain: $ 2.61 Win %: 50.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_HM_TR
DDD Gain: $ 4.44 Win %: 58.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_HM_AV
DDD Gain: $ 4.99 Win %: 75.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_HM_AL
DDD Gain: $ -6.07 Win %: 33.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_HM_QP
DDD Gain: $ 6.13 Win %: 75.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_IT_QL
DDD Gain: $ -2.04 Win %: 50.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_IT_QP
DDD Gain: $ 4.25 Win %: 83.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_IT_TS
DDD Gain: $ 7.57 Win %: 83.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_AO_AC
DDD Gain: $ -7.43 Win %: 25.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_QP_PM
DDD Gain: $ -1.2 Win %: 58.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_AV_TS
DDD Gain: $ 0.56 Win %: 75.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_AL_TS
DDD Gain: $ -0.91 Win %: 50.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_RV
DDD Gain: $ 6.86 Win %: 58.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_IR3
DDD Gain: $ 5.22 Win %: 58.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_TR
DDD Gain: $ 4.69 Win %: 58.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_AV
DDD Gain: $ 6.37 Win %: 75.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_AL
DDD Gain: $ 3.3 Win %: 41.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_VI
DDD Gain: $ 7.59 Win %: 83.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_LI
DDD Gain: $ -2.04 Win %: 50.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_QP
DDD Gain: $ 7.33 Win %: 83.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_HM
DDD Gain: $ 1.46 Win %: 50.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_SS
DDD Gain: $ 6.87 Win %: 75.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_QL
DDD Gain: $ 2.25 Win %: 58.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_DB10
DDD Gain: $ 7.57 Win %: 83.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_AO
DDD Gain: $ 7.57 Win %: 83.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_AC
DDD Gain: $ 8.44 Win %: 83.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_IT
DDD Gain: $ 5.44 Win %: 66.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_PM
DDD Gain: $ 2.94 Win %: 83.00 in 12 days with algo TB3_CC_QM_OB1_OS1_CB5_CS5_TS
DDD Gain: $ -19.73 Win %: 16.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_TR_QP_DB10
DDD Gain: $ -5.82 Win %: 41.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_RV_TR_DB10
DDD Gain: $ 2.21 Win %: 50.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_RV_AV_DB10
DDD Gain: $ 3.57 Win %: 66.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_RV_AL_DB10
DDD Gain: $ -23.11 Win %: 8.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_RV_QP_DB10
DDD Gain: $ -7.26 Win %: 41.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_HM_TR_DB10
DDD Gain: $ 0.45 Win %: 58.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_HM_AV_DB10
DDD Gain: $ -25.96 Win %: 0 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_HM_QP_DB10
DDD Gain: $ 0.9 Win %: 41.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_IT_QL_DB10
DDD Gain: $ -22.35 Win %: 8.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_IT_QP_DB10
DDD Gain: $ -3.68 Win %: 41.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_TR_IR3
DDD Gain: $ -6.87 Win %: 50.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_TR_TS
DDD Gain: $ -12.36 Win %: 41.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_TR_QP
DDD Gain: $ -18.12 Win %: 16.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_QP_IR3
DDD Gain: $ -8.59 Win %: 33.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_RV_TR
DDD Gain: $ -3.15 Win %: 58.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_RV_AV
DDD Gain: $ 3.42 Win %: 75.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_RV_AL
DDD Gain: $ -25.34 Win %: 16.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_RV_QP
DDD Gain: $ -8.5 Win %: 41.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_HM_TR
DDD Gain: $ -2.93 Win %: 50.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_HM_AV
DDD Gain: $ -0.73 Win %: 66.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_HM_AL
DDD Gain: $ -28.98 Win %: 16.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_HM_QP
DDD Gain: $ -0.36 Win %: 50.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_IT_QL
DDD Gain: $ -25.08 Win %: 16.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_IT_QP
DDD Gain: $ -2.96 Win %: 50.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_IT_TS
DDD Gain: $ -6.53 Win %: 33.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_AO_AC
DDD Gain: $ -4.05 Win %: 33.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_QP_PM
DDD Gain: $ -5.27 Win %: 66.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_AV_TS
DDD Gain: $ 1.24 Win %: 83.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_AL_TS
DDD Gain: $ 0.31 Win %: 41.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_RV
DDD Gain: $ -2.51 Win %: 41.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_IR3
DDD Gain: $ -7.39 Win %: 33.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_TR
DDD Gain: $ -4.1 Win %: 58.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_AV
DDD Gain: $ 3.12 Win %: 75.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_AL
DDD Gain: $ -5.58 Win %: 25.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_VI
DDD Gain: $ -1.99 Win %: 41.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_LI
DDD Gain: $ -25.08 Win %: 16.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_QP
DDD Gain: $ -0.74 Win %: 41.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_HM
DDD Gain: $ 2.0 Win %: 50.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_SS
DDD Gain: $ 1.16 Win %: 41.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_QL
DDD Gain: $ -0.16 Win %: 41.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_DB10
DDD Gain: $ -1.9 Win %: 33.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_AO
DDD Gain: $ -3.39 Win %: 33.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_AC
DDD Gain: $ -1.77 Win %: 50.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_IT
DDD Gain: $ -2.26 Win %: 41.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_PM
DDD Gain: $ -1.6 Win %: 50.00 in 12 days with algo TB3_HL_HS_QM_OB1_OS1_CB2_CS2_TS
DDD Gain: $ -18.97 Win %: 25.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_TR_QP_DB6
DDD Gain: $ -4.97 Win %: 33.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_RV_TR_DB6
DDD Gain: $ 0.72 Win %: 58.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_RV_AV_DB6
DDD Gain: $ 1.81 Win %: 58.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_RV_AL_DB6
DDD Gain: $ -21.74 Win %: 25.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_RV_QP_DB6
DDD Gain: $ -5.22 Win %: 33.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_HM_TR_DB6
DDD Gain: $ 2.7 Win %: 58.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_HM_AV_DB6
DDD Gain: $ -23.21 Win %: 25.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_HM_QP_DB6
DDD Gain: $ 1.5 Win %: 41.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_IT_QL_DB6
DDD Gain: $ -21.53 Win %: 25.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_IT_QP_DB6
DDD Gain: $ -8.09 Win %: 25.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_TR_IR1
DDD Gain: $ -7.42 Win %: 33.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_TR_TS
DDD Gain: $ -21.14 Win %: 16.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_TR_QP
DDD Gain: $ -19.02 Win %: 25.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_QP_IR1
DDD Gain: $ -8.52 Win %: 25.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_RV_TR
DDD Gain: $ -3.38 Win %: 25.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_RV_AV
DDD Gain: $ -1.66 Win %: 41.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_RV_AL
DDD Gain: $ -19.3 Win %: 25.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_RV_QP
DDD Gain: $ -8.86 Win %: 25.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_HM_TR
DDD Gain: $ -0.02 Win %: 33.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_HM_AV
DDD Gain: $ -0.8 Win %: 50.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_HM_AL
DDD Gain: $ -20.98 Win %: 25.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_HM_QP
DDD Gain: $ -0.85 Win %: 41.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_IT_QL
DDD Gain: $ -19.21 Win %: 25.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_IT_QP
DDD Gain: $ -8.58 Win %: 41.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_IT_TS
DDD Gain: $ -3268.47 Win %: 0 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_AO_AC
DDD Gain: $ -21.47 Win %: 8.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_QP_PM
DDD Gain: $ -1.63 Win %: 50.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_AV_TS
DDD Gain: $ -3.13 Win %: 41.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_AL_TS
DDD Gain: $ -5.71 Win %: 41.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_RV
DDD Gain: $ -5.91 Win %: 41.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_IR1
DDD Gain: $ -8.21 Win %: 25.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_TR
DDD Gain: $ -4.2 Win %: 25.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_AV
DDD Gain: $ -2.99 Win %: 33.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_AL
DDD Gain: $ -3.63 Win %: 8.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_VI
DDD Gain: $ -6.55 Win %: 33.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_LI
DDD Gain: $ -19.21 Win %: 25.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_QP
DDD Gain: $ -5.94 Win %: 41.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_HM
DDD Gain: $ -2.35 Win %: 41.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_SS
DDD Gain: $ -0.56 Win %: 41.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_QL
DDD Gain: $ -6.36 Win %: 50.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_DB6
DDD Gain: $ -5.67 Win %: 50.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_AO
DDD Gain: $ -3191.93 Win %: 0 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_AC
DDD Gain: $ -6.89 Win %: 41.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_IT
DDD Gain: $ -5.63 Win %: 33.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_PM
DDD Gain: $ -6.91 Win %: 41.00 in 12 days with algo TB5_PL_QM_OB1_OS1_CB5_CS5_TS
